--- a/style.css
+++ b/style.css
@@ -261,6 +261,12 @@
 			width: 0.9em;
 			height: auto;
 		}
+
+		.preview-box {
+			background: conic-gradient(from 90deg at 1px 1px, #0000 90deg, var(--color-border-active) 0) repeat 0 0 / var(--preview-bg-grid-size, 30px) var(--preview-bg-grid-size, 30px);
+			background-clip: padding-box;
+			background-origin: border-box;
+		}
 	}
 
 	@layer sidebar {
@@ -584,6 +590,7 @@
 		}
 
 		.app-node-tile__preview-image {
+			--preview-bg-grid-size: 15px;
 			position: absolute;
 			z-index: 10;
 			inset: calc(100% - var(--size-gap)) 0 auto 50%;
@@ -595,7 +602,7 @@
 
 			border: 1px solid var(--color-border);
 			border-radius: var(--radius-small);
-			background: var(--color-bg);
+			background-color: var(--color-bg);
 			pointer-events: none;
 
 			transform: translateX(-50%);
@@ -1147,14 +1154,13 @@
 			}
 
 			.app-preview-window {
+				--preview-bg-grid-size: 30px;
+
 				height: 0;
 				min-height: 100%;
 				overflow: clip;
 				overflow-clip-margin: var(--size-gutter);
 
-				background: conic-gradient(from 90deg at 1px 1px, #0000 90deg, var(--color-border-active) 0) repeat 0 0 / 30px 30px;
-				background-clip: padding-box;
-				background-origin: border-box;
 				border: 2px dashed var(--color-border-active);
 			}
 
@@ -1237,3 +1243,4 @@
 			display: none !important;
 		}
 	}
+}
