--- a/style.css
+++ b/style.css
@@ -773,6 +773,7 @@
 					line-height: 1.3;
 					color: var(--color-text);
 					border: 1px solid var(--color-border);
+					border-radius: 0;
 					background: var(--color-bg);
 					box-shadow: inset var(--box-glow);
 
@@ -808,6 +809,17 @@
 				textarea {
 					resize: vertical;
 					max-width: 100%;
+				}
+
+				.app-graph select:not([data-spcificity-hack="!"]) {
+					padding-inline-end: 1.25em;
+					-webkit-appearance: none;
+					-moz-appearance: none;
+					appearance: none;
+					background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='%23ffffff' stroke-width='2' stroke-linecap='round' stroke-linejoin='arcs'%3E%3Cpath d='M6 9l6 6 6-6'/%3E%3C/svg%3E");
+					background-repeat: no-repeat;
+					background-position: right center;
+					background-size: 1.25em auto;
 				}
 
 				fieldset {
