Run prettier on CSS and slightly improve <details>

--- a/style-src.css
+++ b/style-src.css
@@ -119,7 +119,7 @@
 		background: var(--color-bg-alt);
 	}
 
-	header>* {
+	header > * {
 		flex: 1 0 0;
 	}
 
@@ -192,11 +192,11 @@
 		padding: 0;
 	}
 
-	.flow>*+* {
+	.flow > * + * {
 		margin-block-start: var(--flow-space, 1em);
 	}
 
-	.flow> :is(h1, h2, h3)+* {
+	.flow > :is(h1, h2, h3) + * {
 		--flow-space: 0.125em;
 	}
 
@@ -248,7 +248,7 @@
 			height: auto;
 		}
 
-		:not(:hover, :focus-within)>.help-link {
+		:not(:hover, :focus-within) > .help-link {
 			opacity: 0.67;
 		}
 
@@ -257,13 +257,14 @@
 			align-items: center;
 		}
 
-		.help-link>svg {
+		.help-link > svg {
 			width: 0.9em;
 			height: auto;
 		}
 
 		.preview-box {
-			background: conic-gradient(from 90deg at 1px 1px, #0000 90deg, var(--color-border-active) 0) repeat 0 0 / var(--preview-bg-grid-size, 30px) var(--preview-bg-grid-size, 30px);
+			background: conic-gradient(from 90deg at 1px 1px, #0000 90deg, var(--color-border-active) 0) repeat 0 0 / var(--preview-bg-grid-size, 30px)
+				var(--preview-bg-grid-size, 30px);
 			background-clip: padding-box;
 			background-origin: border-box;
 		}
@@ -292,12 +293,16 @@
 			resize: none;
 			/* Move it all the way to the left but add the size of the button and gutter to ensure the button stays visible */
 			translate: calc(-100% + (var(--button-ui-size) + var(--size-gutter)) * 2);
+
+			.app-sidebar-inner {
+				scrollbar-width: none;
+			}
 		}
 
 		.app-sidebar-inner {
 			--sidebar-bg: var(--color-bg-alt);
 			flex: 1 0 100%;
-			overflow: auto;
+			overflow: scroll;
 			padding: var(--size-gutter);
 
 			border: 1px solid var(--color-border);
@@ -309,6 +314,11 @@
 			scrollbar-color: var(--scrollbar-colors);
 
 			transition: visibility var(--transition);
+
+			@supports (scrollbar-gutter: stable) {
+				overflow: auto;
+				scrollbar-gutter: stable;
+			}
 		}
 
 		.app-sidebar[data-expanded='false'] .app-sidebar-inner {
@@ -343,7 +353,6 @@
 		}
 
 		@media (prefers-reduced-motion: reduce) {
-
 			.app-sidebar,
 			.app-sidebar-inner,
 			.app-sidebar-toggle {
@@ -351,17 +360,39 @@
 			}
 		}
 
-		.app-sidebar-inner>details {
+		@media (prefers-reduced-motion: no-preference) {
+			@supports (interpolate-size: allow-keywords) {
+				details {
+					interpolate-size: allow-keywords;
+
+					&::details-content {
+						block-size: 0;
+						overflow-y: clip;
+
+						transition: all var(--transition);
+						transition-property: content-visibility, opacity, block-size;
+						transition-behavior: allow-discrete;
+					}
+
+					&[open]::details-content {
+						block-size: auto;
+					}
+				}
+			}
+		}
+
+		.app-sidebar-inner > details {
 			margin-block-start: var(--size-gutter);
 		}
 
-		.app-sidebar-inner>details>summary {
+		.app-sidebar-inner > details > summary {
 			padding-block: var(--size-gap);
 
 			cursor: pointer;
 		}
 
-		.app-sidebar-inner>details[open]>summary::marker {
+		.app-sidebar-inner > details:not([open]) > summary:is(:hover, :focus)::marker,
+		.app-sidebar-inner > details[open] > summary::marker {
 			color: var(--color-text-alt);
 		}
 
@@ -374,7 +405,7 @@
 			gap: var(--size-gap);
 		}
 
-		.app-nodes-item[data-nested]>.app-template-tile {
+		.app-nodes-item[data-nested] > .app-template-tile {
 			margin-inline-start: 2em;
 		}
 	}
@@ -392,7 +423,7 @@
 			font-size: 0.875rem;
 		}
 
-		.app-graph>* {
+		.app-graph > * {
 			position: relative;
 
 			grid-area: 1 / -1;
@@ -443,7 +474,7 @@
 			opacity: 1;
 		}
 
-		.app-graph-lines .app-graph-line-action>.app-graph-line-action-button {
+		.app-graph-lines .app-graph-line-action > .app-graph-line-action-button {
 			stroke: var(--color-border);
 			stroke-width: 2px;
 			fill: var(--color-bg);
@@ -452,7 +483,7 @@
 			cursor: pointer;
 		}
 
-		.app-graph-lines .app-graph-line-action>.app-graph-line-action-button:hover {
+		.app-graph-lines .app-graph-line-action > .app-graph-line-action-button:hover {
 			fill: var(--color-bg);
 		}
 
@@ -564,6 +595,10 @@
 			width: var(--tile-width);
 
 			box-shadow: var(--drop-shadow);
+
+			&:is(:hover, :focus) {
+				border-color: var(--color-border-active);
+			}
 		}
 
 		.app-node-tile__preview {
@@ -607,7 +642,7 @@
 
 			transform: translateX(-50%);
 
-			&>svg {
+			& > svg {
 				display: block;
 				width: 100%;
 				aspect-ratio: 2;
@@ -633,7 +668,7 @@
 				--sidebar-bg: var(--color-bg-delete);
 			}
 
-			.app-sidebar-inner.is-threatening>details {
+			.app-sidebar-inner.is-threatening > details {
 				visibility: hidden;
 			}
 
@@ -735,12 +770,12 @@
 					width: 100%;
 				}
 
-				.app-node-tile__control-label-wrap:hover+.app-node-tile__control,
-				.app-node-tile__control> :not(.compound-input):hover {
+				.app-node-tile__control-label-wrap:hover + .app-node-tile__control,
+				.app-node-tile__control > :not(.compound-input):hover {
 					--color-border: var(--color-border-active);
 				}
 
-				.app-node-tile__control>.compound-input> :is(input:where([type='text'], [type='url'], [type='number']), textarea, select, output, .custom-input):hover {
+				.app-node-tile__control > .compound-input > :is(input:where([type='text'], [type='url'], [type='number']), textarea, select, output, .custom-input):hover {
 					--color-border: var(--color-border-active);
 				}
 
@@ -811,7 +846,7 @@
 					max-width: 100%;
 				}
 
-				.app-graph select:not([data-spcificity-hack="!"]) {
+				.app-graph select:not([data-spcificity-hack='!']) {
 					padding-inline-end: 1.25em;
 					-webkit-appearance: none;
 					-moz-appearance: none;
@@ -835,7 +870,7 @@
 					gap: var(--size-gutter);
 					cursor: text;
 
-					&>input[type='text'] {
+					& > input[type='text'] {
 						flex-grow: 1;
 						appearance: none;
 						padding: 0;
@@ -845,7 +880,7 @@
 						outline: none;
 					}
 
-					&>input {
+					& > input {
 						min-height: 0;
 					}
 				}
@@ -859,7 +894,7 @@
 					cursor: default;
 				}
 
-				.custom-input-colorwrap>input[type='color'] {
+				.custom-input-colorwrap > input[type='color'] {
 					width: 3em;
 					height: 1.5em;
 				}
@@ -887,8 +922,8 @@
 					outline-offset: 1px;
 				}
 
-				.custom-input-colorwrap:not([data-invalid-color])>input[type='color'],
-				.custom-input-colorwrap[data-invalid-color='transparent']>input[type='color'] {
+				.custom-input-colorwrap:not([data-invalid-color]) > input[type='color'],
+				.custom-input-colorwrap[data-invalid-color='transparent'] > input[type='color'] {
 					opacity: 0;
 				}
 
@@ -908,26 +943,35 @@
 					background: repeating-conic-gradient(#333 0% 25%, #ccc 0% 50%) 50% / 16px 16px;
 				}
 
-				.custom-input-colorwrap:is([data-invalid-color='transparent' i], [data-invalid-color='currentColor' i], [data-invalid-color='inherit' i])>input[type='color'] {
+				.custom-input-colorwrap:is([data-invalid-color='transparent' i], [data-invalid-color='currentColor' i], [data-invalid-color='inherit' i]) > input[type='color'] {
 					opacity: 0;
 				}
 
 				.custom-input-colorwrap:is([data-invalid-color='currentColor' i], [data-invalid-color='inherit' i])::after {
-					background: linear-gradient(0deg,
-							transparent calc(50% - 1px),
-							var(--color-custom-input-helper-text) 0,
-							var(--color-custom-input-helper-text) calc(50% + 1px),
-							transparent 0) no-repeat 20% 25% / 40% 3px,
-						linear-gradient(0deg,
-							transparent calc(50% - 1px),
-							var(--color-custom-input-helper-text) 0,
-							var(--color-custom-input-helper-text) calc(50% + 1px),
-							transparent 0) no-repeat 50% 50% / 40% 3px,
-						linear-gradient(0deg,
-							transparent calc(50% - 1px),
-							var(--color-custom-input-helper-text) 0,
-							var(--color-custom-input-helper-text) calc(50% + 1px),
-							transparent 0) no-repeat 80% 75% / 40% 3px;
+					background: linear-gradient(
+								0deg,
+								transparent calc(50% - 1px),
+								var(--color-custom-input-helper-text) 0,
+								var(--color-custom-input-helper-text) calc(50% + 1px),
+								transparent 0
+							)
+							no-repeat 20% 25% / 40% 3px,
+						linear-gradient(
+								0deg,
+								transparent calc(50% - 1px),
+								var(--color-custom-input-helper-text) 0,
+								var(--color-custom-input-helper-text) calc(50% + 1px),
+								transparent 0
+							)
+							no-repeat 50% 50% / 40% 3px,
+						linear-gradient(
+								0deg,
+								transparent calc(50% - 1px),
+								var(--color-custom-input-helper-text) 0,
+								var(--color-custom-input-helper-text) calc(50% + 1px),
+								transparent 0
+							)
+							no-repeat 80% 75% / 40% 3px;
 					background-color: var(--color-custom-input-helper-bg);
 				}
 
@@ -984,13 +1028,12 @@
 					margin-block-start: var(--size-gap);
 				}
 
-				.control-options>* {
+				.control-options > * {
 					flex: 1 0 auto;
 				}
 			}
 
 			@layer state {
-
 				[data-from-control][readonly],
 				select[data-from-control][disabled],
 				.custom-input.custom-input--has-readonly {
@@ -1026,6 +1069,8 @@
 			.app-node-tile__port {
 				position: absolute;
 				inset-block: 0;
+
+				align-self: center;
 				margin-block: auto;
 				width: 20px;
 				aspect-ratio: 1;
@@ -1052,19 +1097,21 @@
 			}
 
 			.app-node-tile__port[data-port-relation='one'][data-port-connected='true'] {
-				background: radial-gradient(circle at 50% 50%,
-						var(--port-connect-color) 33%,
-						var(--port-connect-stroke-color) calc(33% + 0.5px),
-						var(--port-connect-stroke-color) calc(33% + 1.5px),
-						hsl(var(--port-hue, 275), 84%, 50%) calc(33% + 2.5px));
+				background: radial-gradient(
+					circle at 50% 50%,
+					var(--port-connect-color) 33%,
+					var(--port-connect-stroke-color) calc(33% + 0.5px),
+					var(--port-connect-stroke-color) calc(33% + 1.5px),
+					hsl(var(--port-hue, 275), 84%, 50%) calc(33% + 2.5px)
+				);
 			}
 
 			.app-node-tile__port[data-port-relation='many'] {
 				--port-radius: 4px;
 				--port-many-diamond-factor: 64%;
 				--grad-def: transparent var(--port-many-diamond-factor), hsl(var(--port-hue, 275), 84%, 10%) 0;
-				background-image: linear-gradient(to top right, var(--grad-def)), linear-gradient(to bottom right, var(--grad-def)), linear-gradient(to bottom left, var(--grad-def)),
-					linear-gradient(to top left, var(--grad-def));
+				background-image: linear-gradient(to top right, var(--grad-def)), linear-gradient(to bottom right, var(--grad-def)),
+					linear-gradient(to bottom left, var(--grad-def)), linear-gradient(to top left, var(--grad-def));
 				background-color: hsl(var(--port-hue, 275), 84%, 50%);
 			}
 
@@ -1073,11 +1120,9 @@
 				--grad-def: transparent var(--port-many-diamond-factor), var(--port-connect-stroke-color) 0;
 				--grad-def2: transparent var(--port-many-diamond-factor2), hsl(var(--port-hue, 275), 84%, 50%) 0;
 				background-image:
-					/* Background layer*/
-					linear-gradient(to top right, var(--grad-def2)), linear-gradient(to bottom right, var(--grad-def2)),
+					/* Background layer*/ linear-gradient(to top right, var(--grad-def2)), linear-gradient(to bottom right, var(--grad-def2)),
 					linear-gradient(to bottom left, var(--grad-def2)), linear-gradient(to top left, var(--grad-def2)),
-					/* Diamond Stroke */
-					linear-gradient(to top right, var(--grad-def)), linear-gradient(to bottom right, var(--grad-def)),
+					/* Diamond Stroke */ linear-gradient(to top right, var(--grad-def)), linear-gradient(to bottom right, var(--grad-def)),
 					linear-gradient(to bottom left, var(--grad-def)), linear-gradient(to top left, var(--grad-def));
 				background-color: var(--port-connect-color);
 			}
